--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
     "react-dom": "19.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
