--- a/frontend/nextjs-dashboard/tsconfig.json
+++ b/frontend/nextjs-dashboard/tsconfig.json
@@ -16,7 +16,7 @@
     // "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     // "jsx": "preserve",
     "incremental": true,
     "plugins": [
@@ -37,7 +37,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.ts",
-    "scripts/seed.js"
+    "scripts/seed.js",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
