--- a/frontend/nextjs-dashboard/package.json
+++ b/frontend/nextjs-dashboard/package.json
@@ -12,12 +12,14 @@
     "axios": "^1.13.1",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "file-loader": "^6.2.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.7",
+    "raw-loader": "^4.0.2",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.65.0",
