--- a/frontend/nextjs-dashboard/package.json
+++ b/frontend/nextjs-dashboard/package.json
@@ -16,12 +16,14 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "moment": "^2.30.1",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.7",
     "raw-loader": "^4.0.2",
     "react": "latest",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "latest",
     "react-hook-form": "^7.65.0",
     "tailwindcss": "3.4.17",
@@ -33,6 +35,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "19.0.3"
   },
   "pnpm": {
