--- a/frontend/nextjs-dashboard/package.json
+++ b/frontend/nextjs-dashboard/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.1",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "file-loader": "^6.2.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
