--- a/frontend/nextjs-dashboard/package.json
+++ b/frontend/nextjs-dashboard/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/react-dnd": "^3.0.2",
+    "@types/react-dnd-html5-backend": "^3.0.2",
     "autoprefixer": "10.4.20",
     "axios": "^1.13.1",
     "bcrypt": "^5.1.1",
@@ -25,6 +27,8 @@
     "raw-loader": "^4.0.2",
     "react": "latest",
     "react-big-calendar": "^1.19.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "latest",
     "react-hook-form": "^7.65.0",
     "tailwindcss": "3.4.17",
